--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
                     <li><a href="sc.chinaz.com" class="nav_even">社区新闻</a></li>
                     <li><a href="sc.chinaz.com" class="nav">社区服务</a></li>
                     <li><a href="sc.chinaz.com" class="nav_even">业委会</a></li>
-                    <li><a href="sc.chinaz.com" class="nav_even">社区论坛</a></li>
-                    <li><a href="sc.chinaz.com" class="nav">事物公决</a></li>
+                    <li><a href="sc.chinaz.com" class="nav">社区论坛</a></li>
+                    <li><a href="sc.chinaz.com" class="nav_even">事物公决</a></li>
                 </ul>
             </div>
             
